--- a/requisicoes_assincronas.html
+++ b/requisicoes_assincronas.html
@@ -14,10 +14,23 @@
 
             let ajax = new XMLHttpRequest();
 
-            ajax.open('GET', url)
-            ajax.send()
+                //requisição não iniciada - state = 0;
+                console.log(ajax.readyState)
 
-            console.log(ajax)
+            ajax.open('GET', url)
+
+            // conexão estabelecida com o servidor - state 1;
+            console.log(ajax.readyState)
+            
+
+            //de alguma logica que fique olhando para o progresso da requisição
+            ajax.onreadystatechange = () => {
+                console.log(ajax.readyState)
+            }
+
+            ajax.send()
+            //console.log(ajax)
+            
         }
         </script>
 
