Interceptar o conteudo no front end da aplicação utilizando o responseText

--- a/requisicoes_assincronas.html
+++ b/requisicoes_assincronas.html
@@ -38,13 +38,13 @@
             ajax.onreadystatechange = () => {
                 if(ajax.readyState == 4 && ajax.status == 200){
 
-                    document.getElementById('conteudo').innerHTML = 'requisição finalizada com sucesso, o status é 200'
+                    document.getElementById('conteudo').innerHTML = ajax.responseText
                    // document.getElementById('loading').remove()
                 }
 
                 if(ajax.readyState == 4 && ajax.status == 404){
 
-                    document.getElementById('conteudo').innerHTML = 'requisição finalizada, porém, o recurso solicitado nao foi encontrado, o status é 404'
+                    document.getElementById('conteudo').innerHTML = '.. Tente novamente mais tarde :s'
                    // document.getElementById('loading').remove()
                 }
 
@@ -76,7 +76,7 @@
 	    		<div class="col-md-4 center"></div>
 	    		<div class="col-md-4 center">
 	    			<a href="#" class="btn btn-primary" onclick="requisitarPagina('pagina_1_conteudo.php')">Página 1</a>
-	    			<a href="#" class="btn btn-primary" onclick="requisitarPagina('pagina_2_conteudo.html')">Página 2</a>
+	    			<a href="#" class="btn btn-primary" onclick="requisitarPagina('pagina_5_conteudo.html')">Página 2</a>
 	    			<a href="#" class="btn btn-primary" onclick="requisitarPagina('pagina_3_conteudo.html')">Página 3</a>
 	    		</div>
 	    		<div class="col-md-4 center"></div>
