--- a/filmes.html
+++ b/filmes.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>Catálogo de filmes</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <script src="xmltojson.js"></script>
+
         <script>
             function getFilmes(){
                 let xmlHttp = new XMLHttpRequest()
@@ -13,6 +15,15 @@
                     if(xmlHttp.readyState == 4 && xmlHttp.status == 200){
                         let xmlFilmes = xmlHttp.responseText
                         console.log(xmlFilmes)
+                        let parser = new DOMParser()
+
+                        domFilmes = parser.parseFromString(xmlFilmes , 'text/xml')
+
+                        console.log(domFilmes)
+
+                        jsonFilmes = xmlToJson(domFilmes)
+
+                        console.log(jsonFilmes)
                     }
 
                     if(xmlHttp.readyState == 4 && xmlHttp.status == 404){
